--- a/GroupProject/Views/Login/Login.cshtml
+++ b/GroupProject/Views/Login/Login.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model GroupProject.Models.User
+
 @{
     Layout = null;
 }
@@ -11,31 +12,48 @@
     <title>Login</title>
 </head>
 <body>
-    <div>@ViewBag.Message</div>
-    @using (Html.BeginForm("CheckLogin", "Login", FormMethod.Post))
+    @using (Html.BeginForm("Login", "Login", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post)) 
     {
-        <table>
-            <tr>
-                <td>Username: </td>
-                <td> <input type="text" required name="txtUsername" /></td>
-            </tr>
-            <tr>
-                <td>Password: </td>
-                <td> <input type="password" required name="txtPassword" /></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>
-                    <input type="submit" value="Login" />
-                    <input type="reset" value="Reset" />
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    @Html.ActionLink("Register", "Index", "Register")
-                </td>
-            </tr>
-        </table>
+        @Html.AntiForgeryToken()
+        
+        <div class="form-horizontal">
+            <h4>User</h4>
+            <h5>@ViewBag.Message</h5>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.PasswordFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.RememberMe, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    <div class="checkbox">
+                        @Html.CheckBoxFor(model => model.RememberMe)
+                        @Html.ValidationMessageFor(model => model.RememberMe, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+    
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Login" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+        <div>
+            @Html.ActionLink("Register", "Register", "Register")
+        </div>
     }
 </body>
 </html>
