--- a/GroupProject/Views/Register/Register.cshtml
+++ b/GroupProject/Views/Register/Register.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model GroupProject.Models.User
+
 @{
     Layout = null;
 }
@@ -11,33 +12,61 @@
     <title>Register</title>
 </head>
 <body>
-    <div>
-        @ViewBag.Message
-    </div> <br />
-    @using (Html.BeginForm("RegisterAccount", "Register", FormMethod.Post))
+    @using (Html.BeginForm()) 
     {
-        <table>
-            <tr>
-                <td>Username: </td>
-                <td> <input type="text" required name="txtUsername" /></td>
-            </tr>
-            <tr>
-                <td>Password: </td>
-                <td> <input type="password" required name="txtPassword" /></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>
-                    <input type="submit" value="Register" />
-                    <input type="reset" value="Reset" />
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    @Html.ActionLink("Login", "Index", "Login")
-                </td>
-            </tr>
-        </table>
+        @Html.AntiForgeryToken()
+        
+        <div class="form-horizontal">
+            <h4>User</h4>
+            <h5>@ViewBag.Message</h5>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+    
+            <div class="form-group">
+                @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+    
+            <div class="form-group">
+                @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+    
+            <div class="form-group">
+                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                </div>
+            </div>
+    
+            <div class="form-group">
+                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.PasswordFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                </div>
+            </div>
+    
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Register" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
     }
 </body>
 </html>
