--- a/GroupProject/Views/Login/Login.cshtml
+++ b/GroupProject/Views/Login/Login.cshtml
@@ -1,8 +1,5 @@
 ﻿@model GroupProject.Models.User
 
-@{
-    Layout = null;
-}
 
 <!DOCTYPE html>
 
@@ -10,14 +7,15 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Login</title>
+    
 </head>
 <body>
-    @using (Html.BeginForm("Login", "Login", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post)) 
+    @using (Html.BeginForm("Login", "Login", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @id = "loginFormID" }))
     {
         @Html.AntiForgeryToken()
-        
+        HtmlHelper.UnobtrusiveJavaScriptEnabled = false;
         <div class="form-horizontal">
-            <h4>User</h4>
+            <h4>Login</h4>
             <h5>@ViewBag.Message</h5>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -47,13 +45,18 @@
     
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Login" class="btn btn-default" />
+                    <input id="btnLogin" type="submit" value="Login" class="btn btn-default" />
+                </div>
+                <div>
+                    @Html.ActionLink("Register", "Register", "Register")
                 </div>
             </div>
         </div>
-        <div>
-            @Html.ActionLink("Register", "Register", "Register")
-        </div>
+    }
+     
+    @section scripts{
+        @Scripts.Render("~/bundles/jqueryval")
+        @Scripts.Render("~/bundles/login-validator")
     }
 </body>
 </html>
