Add needed view

--- a/GroupProject/WebMVC/Views/Admin.cshtml
+++ b/GroupProject/WebMVC/Views/Admin.cshtml
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
+    @Html.Partial("~/Views/AdminHeader.cshtml")
     <div>
         <p>@Html.ActionLink("Add New Product", "Create", "Bag", null, null)</p>
         Category:
@@ -70,8 +71,8 @@
                 , null);
         };
     </script>
-       
-    </body>
+
+</body>
 
 </html>
 
