--- a/GroupProject/WebMVC/Views/GuestHeader.cshtml
+++ b/GroupProject/WebMVC/Views/GuestHeader.cshtml
@@ -12,11 +12,11 @@
                     <div id="navbar_menu">
                         <ul class="first-ul">
                             <li>
-                                <a class="active" href="loadQuestion">Home</a>
+                                <a class="active" href="@Url.Action("Index", "Login")">Login</a>
                             </li>
-                            <li><a href="createForm.jsp">Create new Question</a></li>
+                            <li><a href="~/Views/Register.cshtml">Register</a></li>
                             <li><a href="logout">Logout</a></li>
-                            </ul>
+                        </ul>
                     </div>
                     <!-- menu end -->
                 </div>
@@ -24,3 +24,4 @@
         </div>
     </div>
 </div>
+
