--- a/GroupProject/WebMVC/Views/GuestHeader.cshtml
+++ b/GroupProject/WebMVC/Views/GuestHeader.cshtml
@@ -12,7 +12,7 @@
                     <div id="navbar_menu">
                         <ul class="first-ul">
                             <li>
-                                <a class="active" href="@Url.Action("Index", "Login")">Login</a>
+                                <a class="active" href="@Url.Action("Index", "Account")">Login</a>
                             </li>
                             <li><a href="~/Views/Register.cshtml">Register</a></li>
                             <li><a href="logout">Logout</a></li>
