--- a/GroupProject/WebMVC/Views/AdminHeader.cshtml
+++ b/GroupProject/WebMVC/Views/AdminHeader.cshtml
@@ -15,7 +15,7 @@
                                 <a class="active" href="loadQuestion">Home</a>
                             </li>
                             <li><a href="createForm.jsp">Create new Question</a></li>
-                            <li><a href="logout">Logout</a></li>
+                            <li><a href="@Url.Action("Logout", "Account")">Logout</a></li>
                             </ul>
                     </div>
                     <!-- menu end -->
