--- a/GroupProject/WebMVC/Views/GuestHeader.cshtml
+++ b/GroupProject/WebMVC/Views/GuestHeader.cshtml
@@ -14,8 +14,7 @@
                             <li>
                                 <a class="active" href="@Url.Action("Index", "Account")">Login</a>
                             </li>
-                            <li><a href="~/Views/Register.cshtml">Register</a></li>
-                            <li><a href="logout">Logout</a></li>
+                            <li><a href="@Url.Action("Register", "Account")">Register</a></li>
                         </ul>
                     </div>
                     <!-- menu end -->
