--- a/GroupProject/WebMVC/Views/Admin.cshtml
+++ b/GroupProject/WebMVC/Views/Admin.cshtml
@@ -1,60 +1,125 @@
-﻿@using WebMVC.BagCategoryService,
+﻿@using WebMVC.BagCategoryService
 @using WebMVC.BagService
+@model WebMVC.Models.BagSearchModel
 @{
-    ViewBag.Title = "Admin";
+    Layout = null;
 }
-
-
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Admin</title>
+    <title>Admin HomePage</title>
     <link href="~/Content/alertifyjs/alertify.min.css" rel="stylesheet" />
     <link href="~/Content/alertifyjs/themes/default.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
+    <link href="~/css/style_1.css" rel="stylesheet" />
 </head>
 <body>
     @Html.Partial("~/Views/AdminHeader.cshtml")
-    <div>
-        <p>@Html.ActionLink("Add New Product", "Create", "Bag", null, null)</p>
-        Category:
-        <select>
-            @foreach (BagCategory bagCate in ViewBag.Categories)
+    <div class="container" style="padding-top: 50px;">
+        <div class="center">
+            @using (Html.BeginForm("Bag", "Search", FormMethod.Post))
             {
-                <option>@bagCate.CateName</option>
+                <span> ID: </span> @Html.EditorFor(model => model.ID)
+                <span> Name: </span> @Html.EditorFor(model => model.Name)
+                <span> Category: </span>
+                @Html.DropDownListFor(model => model.Category, new SelectList(GlobalVariables.Categories, "bagCID", "CateName"), "--Category--")
             }
-        </select>
-        Bag
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Size</th>
-                    <th>Price</th>
-                    <th>Delete</th>
-                    <th>Update</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (Bag bag in ViewBag.Bags)
-                {
-                    <tr>
-                        <td>@bag.BagName</td>
-                        <td>@bag.size</td>
-                        <td>@bag.Price</td>
-                        <td>
-                            <a onclick="Delete('@bag.BagID')"><i class="fa fa-trash"></i> Delete</a>
-                        </td>
-                        <td>@Html.ActionLink("Edit", "Edit", "Bag", new { BagID = bag.BagID }, null)</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
+        </div>
+    </div>
+    <div class="container" style="margin-top: 50px;">
+        @if (ViewBag.Bags != null)
+        {
+            <div class="center">
+                <table border="1" class="table table-bordered" style="width: 1000px; margin-right: 50px; height: 400px;">
+                    <thead>
+                        <tr>
+                            <th scope="col">ID</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Image</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Quantity</th>
+                            <th scope="col"></th>
+                            <th scope="col"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (Bag bag in ViewBag.Bags)
+                        {
+                            <tr>
+                                <td>@bag.BagID</td>
+                                <td>@bag.BagName</td>
+                                <td>
+                                    <img alt="Food Image" src="@Url.Content(bag.Image)" width="100px" height="100px" />
+                                </td>
+                                <td>@bag.Price</td>
+                                <td>@bag.Quantity</td>
+                                <td>
+                                    <div class="center">
+                                        <a onclick="Delete('@bag.BagID')" class="btn btn-large btn-primary">Delete</a>
+                                    </div>
+                                    
+                                </td>
+                                <td>
+                                    <div class="center">
+                                        @Html.ActionLink("Edit", "Edit", "Bag", new { BagID = bag.BagID }, new { @class = "btn", @style = "background-color: #000" })
+                                    </div>
+                                    
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        }
+        @*<c:if test="$}">
+            <div class="center">
+                <c:if test="${}">
+                    <c:url var="prevLink" value="MainController">
+                        <c:param name="action" value="Search" />
+                        <c:param name="page" value="${}" />
+                        <c:param name="txtSearch" value="${}" />
+                        <c:param name="txtFrom" value="${}" />
+                        <c:param name="txtTo" value="${}" />
+                        <c:param name="cboCategory" value="${}" />
+                    </c:url>
+                    <a href="${}" class="btn btn-primary" style="min-width: 50px">Previous</a>
+                </c:if>
+
+                <c:forEach begin="1" end="${}" var="i">
+                    <c:choose>
+                        <c:when test="${}">
+                            <a class="btn btn-primary" style="background-color: #707070; min-width: 50px;">${i}</a>
+                        </c:when>
+                        <c:otherwise>
+                            <c:url var="pageLink" value="MainController">
+                                <c:param name="action" value="Search" />
+                                <c:param name="page" value="${}" />
+                                <c:param name="txtSearch" value="${}" />
+                                <c:param name="txtFrom" value="${}" />
+                                <c:param name="txtTo" value="${}" />
+                                <c:param name="cboCategory" value="${}" />
+                            </c:url>
+                            <a href="${}" class="btn btn-primary" style="min-width: 50px">${}</a>
+                        </c:otherwise>
+                    </c:choose>
+                </c:forEach>
+
+
+                <c:if test="${}">
+                    <c:url var="nextLink" value="MainController">
+                        <c:param name="action" value="Search" />
+                        <c:param name="page" value="${}" />
+                        <c:param name="txtSearch" value="${}" />
+                        <c:param name="txtFrom" value="${}" />
+                        <c:param name="txtTo" value="${}" />
+                        <c:param name="cboCategory" value="${}" />
+                    </c:url>
+                    <a href="${}" class="btn btn-primary" style="min-width: 50px">Next</a>
+                </c:if>
+            </div>*@
     </div>
     <script src="~/Scripts/alertify.min.js"></script>
-
     <script>
         function DisplayMessage() {
             var successMessage = '@TempData["SuccessMessage"]';
@@ -71,9 +136,7 @@
                 , null);
         };
     </script>
-
 </body>
-
 </html>
 
 
