--- a/GroupProject/WebMVC/Views/AdminHeader.cshtml
+++ b/GroupProject/WebMVC/Views/AdminHeader.cshtml
@@ -14,9 +14,10 @@
                             <li>
                                 <a class="active" href="loadQuestion">Home</a>
                             </li>
-                            <li><a href="createForm.jsp">Create new Question</a></li>
+                            <li><a href="createForm.jsp">Create new Bag</a></li>
+                            <li><a href="createForm.jsp">Report Order</a></li>
                             <li><a href="@Url.Action("Logout", "Account")">Logout</a></li>
-                            </ul>
+                        </ul>
                     </div>
                     <!-- menu end -->
                 </div>
