--- a/GroupProject/WebMVC/Views/UserHeader.cshtml
+++ b/GroupProject/WebMVC/Views/UserHeader.cshtml
@@ -14,7 +14,7 @@
                             <li>
                                 <a class="active" href="loadQuestion">Home</a>
                             </li>
-                            <li><a href="createForm.jsp">Cart</a></li>
+                            <li><a href="@Url.Action("Index", "Cart")">Cart</a></li>
                             <li><a href="createForm.jsp">Order History</a></li>
                             <li><a href="logout">Logout</a></li>
                         </ul>
