--- a/GroupProject/WebMVC/Views/Cart.cshtml
+++ b/GroupProject/WebMVC/Views/Cart.cshtml
@@ -1,17 +1,107 @@
-﻿
+﻿@using WebMVC.BagService
+@model WebMVC.Models.Cart
 @{
-    Layout = null;
+    ViewBag.Title = "Index";
 }
-
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Cart</title>
+    <link href="~/Content/alertifyjs/alertify.min.css" rel="stylesheet" />
+    <link href="~/Content/alertifyjs/themes/default.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
+    <link href="~/css/style_1.css" rel="stylesheet" />
 </head>
 <body>
-    <div> 
+    @Html.Partial("~/Views/UserHeader.cshtml")
+    <div class="container" style="margin-top: 50px;">
+        <div class="center">
+            <h1>Your Cart</h1>
+        </div>
+        <div class="row" style="margin-top: 50px;">
+            @if (Model.cart!=null && Model.cart.Values.Count() != 0)
+            {
+            <div class="center">
+                <table border="1" class="table table-bordered" style="width: 800px; margin-right: 50px; height: 310px;">
+                    <thead>
+                        <tr>
+                            <th scope="col">Food name</th>
+                            <th scope="col">Amount</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Total</th>
+                            <th scope="col"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (Bag bag in Model.cart.Values)
+                        {
+                            <tr>
+                                <td>
+                                    @bag.BagName
+                                </td>
+                                <td>
+                                    <div class="center">
+                                        <a href="@Url.Action("UpdateAddCart", "Cart", new {bid=bag.BagID})"><button>+</button></a>
+                                        @bag.Quantity
+                                        <a href="@Url.Action("UpdateSubCart", "Cart", new {bid=bag.BagID})"><button>-</button></a>
+                                    </div>
+                                </td>
+                                <td>
+                                    @bag.Price $
+                                </td>
+                                <td>
+                                    <div id="total">
+                                        @(bag.Quantity * bag.Price)$
+                                    </div>
+                                </td>
+                                <td>
+                                    <a onclick="Delete('@bag.BagID')">Remove</a>
+                                </td>
+                            </tr>
+                        }
+                        <tr>
+                            <td></td>
+                            <td>
+                            </td>
+                            <td></td>
+                            <td>
+                                @Model.Total $
+                            </td>
+                            <td>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                
+            </div>
+            <div class="right">
+                @using (Html.BeginForm("Order", "Order", FormMethod.Post))
+                {
+                    <div class="center">
+                        <input type="submit" value="Check out" class="btn btn-primary" />
+                    </div>
+
+                }
+            </div>
+            }
+            else
+            {
+                <div class="center">
+                    <p>There's nothing in cart.</p>
+                </div>
+                <div class="center">
+                    <a href="@Url.Action("Customer", "Home")" class="btn btn-primary">Back to shopping?</a>
+                </div>
+            }
+        </div>
     </div>
+    <script src="~/Scripts/alertify.min.js"></script>
+    <script>
+        function Delete(id) {
+            alertify.confirm('Confirm', 'Are you sure to remove this bag from cart?', function () { window.location.href ='@Url.Action("RemoveCart", "Cart")?id=' + id;}
+                , null);
+        };
+    </script>
 </body>
 </html>
