--- a/GroupProject/WebMVC/Views/UserHeader.cshtml
+++ b/GroupProject/WebMVC/Views/UserHeader.cshtml
@@ -15,7 +15,7 @@
                                 <a class="active" href="loadQuestion">Home</a>
                             </li>
                             <li><a href="@Url.Action("Index", "Cart")">Cart</a></li>
-                            <li><a href="createForm.jsp">Order History</a></li>
+                            <li><a href="@Url.Action("GetOrderHistory","Order")">Order History</a></li>
                             <li><a href="logout">Logout</a></li>
                         </ul>
                     </div>
