--- a/GroupProject/WebMVC/Views/OrderHistory.cshtml
+++ b/GroupProject/WebMVC/Views/OrderHistory.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model WebMVC.BagService.Order[]
+@using WebMVC.BagService
 @{
     Layout = null;
 }
@@ -7,11 +8,67 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>OrderHistory</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Shopping History</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
+    <link href="~/css/style_1.css" rel="stylesheet" />
 </head>
 <body>
-    <div> 
+    @Html.Partial("~/Views/UserHeader.cshtml")
+    <div class="container" style="margin-top: 50px;">
+        <div class="center">
+            <h1>Your Shopping History</h1>
+        </div>
+    </div>
+    <div class="container" style="margin-top: 50px;">
+        <div class="row" style="margin-top: 50px;">
+            @if (Model != null&& Model.Length>0)
+            {
+                foreach (var item in Model)
+                {
+                    <div class="center">
+                        <table border="1" class="table table-bordered" style="width: 1000px; margin-right: 50px;">
+                            <tr>
+                                <th style="width: 200px;">Buyer's Detail</th>
+                                <td>
+                                    @item.Customer
+                                </td>
+                            </tr>
+                            <tr>
+                                <th style="width: 200px;">List Order Product</th>
+                                <td>
+                                    @{int i = 1;}
+                                    @foreach (Bag bag in item.ListBuyBags.Values)
+                                    {
+                                        <span>@i . @bag.BagName - Quantity: @bag.Quantity - Price: @bag.Price $</span><br />
+                                        i++;
+                                    }
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <th style="width: 200px;">Buy Date</th>
+                                <td>@item.CreateDate</td>
+                            </tr>
+                            <tr>
+                                <th style="width: 200px;">Status</th>
+                                <td>@item.status</td>
+                            </tr>
+                        </table>
+                    </div>
+
+                }
+            }
+            else
+            {
+                <div class="center">
+                    <p>Do not found your order.</p>
+                </div>
+                <div class="center">
+                    <a href="MainController" class="btn btn-primary">Back to shopping?</a>
+                </div>
+            }
+        </div>
     </div>
 </body>
 </html>
